--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -683,7 +683,7 @@
     <string name="thank_you">Bedankt!</string>
     <string name="widget_locked">
         <![CDATA[
-            The widget is locked.<br>Please purchase <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> to unlock it.
+            Deze widget is vergrendeld.<br>Het aanschaffen van <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Eenvoudig Bedankje</a> is nodig om deze widget te kunnen gebruiken.
         ]]>
     </string>
 
@@ -696,7 +696,7 @@
             <a href="%3$s">%4$s</a><br><br>
             <a href="%5$s">%6$s</a><br><br>
             Download de app door op de naam hierboven te klikken.<br><br>
-            Dank u wel!
+            Bedankt!
         ]]>
     </string>
 
