adding some drag and drop related strings from Simple Notes

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -283,6 +283,8 @@
     <string name="call_from_sim_1">Volání ze SIM 1</string>
     <string name="call_from_sim_2">Volání ze SIM 2</string>
     <string name="toggle_filename">Přepnout viditelnost názvů souborů</string>
+    <string name="move_to_top">Move to the top</string>
+    <string name="move_to_bottom">Move to the bottom</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
