--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">Von SIM 1 anrufen</string>
     <string name="call_from_sim_2">Von SIM 2 anrufen</string>
     <string name="toggle_filename">Beschriftungen ein/aus</string>
+    <string name="move_to_top">Nach oben verschieben</string>
+    <string name="move_to_bottom">Nach unten verschieben</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
