--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">Llamar desde SIM 1</string>
     <string name="call_from_sim_2">Llamar desde SIM 2</string>
     <string name="toggle_filename">Cambiar la visibilidad del nombre de archivo</string>
+    <string name="move_to_top">Move to the top</string>
+    <string name="move_to_bottom">Move to the bottom</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
