--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">Soita SIM 1-kortilla</string>
     <string name="call_from_sim_2">Soita SIM 2-kortilla</string>
     <string name="toggle_filename">Tiedostonimien näkyvyys</string>
+    <string name="move_to_top">Siirrä ylimmäksi</string>
+    <string name="move_to_bottom">Siirrä alimmaksi</string>
 
     <!-- Sorting -->
     <string name="sort_by">Järjestä</string>
