--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -275,6 +275,8 @@
     <string name="call_from_sim_1">SIM 1 から電話</string>
     <string name="call_from_sim_2">SIM 2 から電話</string>
     <string name="toggle_filename">ファイル名の表示を切り替え</string>
+    <string name="move_to_top">Move to the top</string>
+    <string name="move_to_bottom">Move to the bottom</string>
 
     <!-- Sorting -->
     <string name="sort_by">並べ替え</string>
