--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">Met SIM 1 bellen</string>
     <string name="call_from_sim_2">Met SIM 2 bellen</string>
     <string name="toggle_filename">Bestandsnamen tonen</string>
+    <string name="move_to_top">Bovenaan zetten</string>
+    <string name="move_to_bottom">Onderaan zetten</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
