--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">SIM 1\'den ara</string>
     <string name="call_from_sim_2">SIM 2\'den ara</string>
     <string name="toggle_filename">Dosya adı görünürlüğünü aç/kapat</string>
+    <string name="move_to_top">Üste taşı</string>
+    <string name="move_to_bottom">Alta taşı</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sıralama ölçütü</string>
