--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -276,6 +276,8 @@
     <string name="call_from_sim_1">来自 SIM 1 的通话</string>
     <string name="call_from_sim_2">来自 SIM 2 的通话</string>
     <string name="toggle_filename">显示文件名</string>
+    <string name="move_to_top">Move to the top</string>
+    <string name="move_to_bottom">Move to the bottom</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
