--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">Κλήση απο SIM 1</string>
     <string name="call_from_sim_2">Κλήση απο SIM 2</string>
     <string name="toggle_filename">Αλλαγή προβολής ονόματος αρχείων</string>
+    <string name="move_to_top">Μετακίνηση στην κορυφή</string>
+    <string name="move_to_bottom">Μετακίνηση στο τέλος</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ταξινόμηση κατά</string>
