--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">Appeler depuis SIM 1</string>
     <string name="call_from_sim_2">Appeler depuis SIM 2</string>
     <string name="toggle_filename">Permuter l\'affichage des noms de fichier</string>
+    <string name="move_to_top">Move to the top</string>
+    <string name="move_to_bottom">Move to the bottom</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
