--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -279,6 +279,8 @@
     <string name="call_from_sim_1">Chamada no SIM 1</string>
     <string name="call_from_sim_2">Chamada no SIM 2</string>
     <string name="toggle_filename">Exibir/ocultar nome do arquivo</string>
+    <string name="move_to_top">Mover para cima</string>
+    <string name="move_to_bottom">Mover para baixo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
