--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -283,6 +283,8 @@
     <string name="call_from_sim_1">Zavolať zo SIM 1</string>
     <string name="call_from_sim_2">Zavolať zo SIM 2</string>
     <string name="toggle_filename">Prepnúť viditeľnosť názvov súborov</string>
+    <string name="move_to_top">Presunúť na vrch</string>
+    <string name="move_to_bottom">Presunúť na spodok</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
