--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -283,8 +283,8 @@
     <string name="call_from_sim_1">Вызов с SIM 1</string>
     <string name="call_from_sim_2">Вызов с SIM 2</string>
     <string name="toggle_filename">Переключить отображение имени файла</string>
-    <string name="move_to_top">Move to the top</string>
-    <string name="move_to_bottom">Move to the bottom</string>
+    <string name="move_to_top">Переместить наверх</string>
+    <string name="move_to_bottom">Переместить вниз</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
