--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -279,8 +279,8 @@
     <string name="call_from_sim_1">Appeler depuis SIM 1</string>
     <string name="call_from_sim_2">Appeler depuis SIM 2</string>
     <string name="toggle_filename">Permuter l\'affichage des noms de fichier</string>
-    <string name="move_to_top">Move to the top</string>
-    <string name="move_to_bottom">Move to the bottom</string>
+    <string name="move_to_top">Positionner en haut</string>
+    <string name="move_to_bottom">Positionner en bas</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
@@ -729,7 +729,7 @@
     <string name="contacts_short">Contacts</string>
     <string name="dialer_short">Dialer</string>
     <string name="draw_short">Dessin</string>
-    <string name="file_manager_short">Gestionnaire de Fichiers</string>
+    <string name="file_manager_short">Gestionnaire de fichiers</string>
     <string name="flashlight_short">Lampe de Poche</string>
     <string name="gallery_short">Galerie</string>
     <string name="music_player_short">Lecteur de Musique</string>
