--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -279,8 +279,8 @@
     <string name="call_from_sim_1">Truca des de la SIM 1</string>
     <string name="call_from_sim_2">Truca des de la SIM 2</string>
     <string name="toggle_filename">Canviar la visibilitat del nom d’arxiu</string>
-    <string name="move_to_top">Move to the top</string>
-    <string name="move_to_bottom">Move to the bottom</string>
+    <string name="move_to_top">Desplaceu-vos a la part superior</string>
+    <string name="move_to_bottom">Desplaceu-vos cap a la part inferior</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
