adding note locking and Recents tab at Why upgrade arguments

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -804,11 +804,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listas de verificación</string>
     <string name="why_upgrade_different_note_per_widget">Diferentes notas y colores por widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Personalización del formato de fecha y hora</string>
     <string name="why_upgrade_shortcuts">Atajos de la pantalla de inicio</string>
     <string name="why_upgrade_file_compression">Soporte de compresión de archivos</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalización del color de fondo</string>
