--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -801,11 +801,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Tarkistuslistat</string>
     <string name="why_upgrade_different_note_per_widget">Pienoissovelluskohtainen muistiinpano ja värit</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Päivämäärän ja ajan näyttömuotojen kustomointi</string>
     <string name="why_upgrade_shortcuts">Pikakuvakkeet kotivalikkoon</string>
     <string name="why_upgrade_file_compression">Tuki tiedostojen pakkaukselle</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Taustavärin kustomointi</string>
