--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -805,11 +805,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listes de contrôle</string>
     <string name="why_upgrade_different_note_per_widget">Différentes couleurs par widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Personnalisation du format de date et d\'heure</string>
     <string name="why_upgrade_shortcuts">Raccourcis pour l\'écran d\'accueil</string>
     <string name="why_upgrade_file_compression">Prend en charge la compression de fichiers</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personnalisation de la couleur de fond</string>
