--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -804,11 +804,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">चेकलिस्ट्स</string>
     <string name="why_upgrade_different_note_per_widget">हरेक विजेट अलग नोट और रंग में</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">दिनांक और समय फॉर्मेट कस्टमाइजेशन</string>
     <string name="why_upgrade_shortcuts">होम स्क्रीन शॉर्टकट</string>
     <string name="why_upgrade_file_compression">फाइल कम्प्रेशन सपोर्ट</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">बैकग्राउंड कलर कस्टमाइजेशन</string>
