--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -771,11 +771,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Daftar periksa</string>
     <string name="why_upgrade_different_note_per_widget">Catatan dan warna yang berbeda setiap widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Kustomisasi format tanggal dan waktu</string>
     <string name="why_upgrade_shortcuts">Pintasan layar beranda</string>
     <string name="why_upgrade_file_compression">Mendukung kompresi file</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Kustomisasi warna latar belakang</string>
