--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -804,11 +804,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Liste di controllo</string>
     <string name="why_upgrade_different_note_per_widget">Note e colori diversi per ogni widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Personalizzazione del formato di data e ora</string>
     <string name="why_upgrade_shortcuts">Scorciatoie della schermata iniziale</string>
     <string name="why_upgrade_file_compression">Supporto per la compressione dei file</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalizzazione del colore di sfondo</string>
