--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -770,11 +770,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">체크리스트</string>
     <string name="why_upgrade_different_note_per_widget">위젯별로 다양한 노트 및 색깔 지원 </string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">날짜 및 시간 설정 가능 </string>
     <string name="why_upgrade_shortcuts">홈 화면 바로가기</string>
     <string name="why_upgrade_file_compression">파일 압축 기능 지원 </string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">바탕화면 설정 가능</string>
