--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -802,11 +802,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listas</string>
     <string name="why_upgrade_different_note_per_widget">Notas e cores diferentes por widgets</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Personalização do formato de data e hora</string>
     <string name="why_upgrade_shortcuts">Atalhos na tela principal</string>
     <string name="why_upgrade_file_compression">Suporte para compressão de arquivos</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalização da cor de fundo</string>
