--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -839,11 +839,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Контрольные списки</string>
     <string name="why_upgrade_different_note_per_widget">Разные заметки и цвета для каждого виджета</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Настройка формата даты и времени</string>
     <string name="why_upgrade_shortcuts">Ярлыки на главном экране</string>
     <string name="why_upgrade_file_compression">Поддержка сжатия файлов</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Настройка цвета фона</string>
