--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -804,11 +804,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Llistes de comprovació</string>
     <string name="why_upgrade_different_note_per_widget">Nota i colors diferents per widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Personalització del format de data i hora</string>
     <string name="why_upgrade_shortcuts">Dreceres de pantalla inicial</string>
     <string name="why_upgrade_file_compression">Suport de compressió de fitxers</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalització del color de fons</string>
