--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -803,11 +803,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Tjeklister</string>
     <string name="why_upgrade_different_note_per_widget">Forskellig note og farver per widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Tilpasning af format på dato og tid</string>
     <string name="why_upgrade_shortcuts">Genveje til startside</string>
     <string name="why_upgrade_file_compression">Understøtter pakning af filer</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Selvvalgt baggrundsfarve</string>
