--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -805,11 +805,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Checklisten</string>
     <string name="why_upgrade_different_note_per_widget">Unterschiedliche Notizen und Farben pro Widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Anpassung von Datums- und Zeitformat</string>
     <string name="why_upgrade_shortcuts">Shortcuts für den Startbildschirm</string>
     <string name="why_upgrade_file_compression">Unterstützung für Dateikomprimierung</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Anpassung der Hintergrundfarbe</string>
