--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -802,11 +802,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Listas de verificación</string>
     <string name="why_upgrade_different_note_per_widget">Diferentes notas e cores por widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Personalización do formato da data e hora</string>
     <string name="why_upgrade_shortcuts">Atallos na pantalla principal</string>
     <string name="why_upgrade_file_compression">Soporte da compresión do ficheiro</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Personalización da cor de fondo</string>
