--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -767,11 +767,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">チェックリスト</string>
     <string name="why_upgrade_different_note_per_widget">各ウィジェットに違うメモと色</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">日付と時刻のフォーマットのカスタマイズ</string>
     <string name="why_upgrade_shortcuts">ホーム画面のショートカット</string>
     <string name="why_upgrade_file_compression">ファイル圧縮対応</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">背景色のカスタマイズ</string>
