--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -803,11 +803,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Checklists</string>
     <string name="why_upgrade_different_note_per_widget">Verschillende notities en kleuren per widget</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Formaat datum en tijd aanpassen</string>
     <string name="why_upgrade_shortcuts">Snelkoppelingen op het startscherm</string>
     <string name="why_upgrade_file_compression">Ondersteuning voor bestandscompressie</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Achtergrondkleur aanpassen</string>
