--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -838,11 +838,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Zoznamy položiek</string>
     <string name="why_upgrade_different_note_per_widget">Iná poznámka a farby na každom widgete</string>
+    <string name="why_upgrade_note_locking">Uzamykanie poznámok</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Nastaviteľný formát dátumu a času</string>
     <string name="why_upgrade_shortcuts">Odkazy na domovskú stránku</string>
     <string name="why_upgrade_file_compression">Kompresia súborov</string>
+    <string name="why_upgrade_recents_tab">Karta s najnovšími súbormi</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Meniteľná farba pozadia</string>
