--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -801,11 +801,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Kontrol listeleri</string>
     <string name="why_upgrade_different_note_per_widget">Her araç için farklı not ve renkler</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Saat ve tarih formatını kişiselleştirme</string>
     <string name="why_upgrade_shortcuts">Ana sayfada kısayollar</string>
     <string name="why_upgrade_file_compression">Dosya sıkıştırma desteği</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Arka plan renklerini kişiselleştirme</string>
