--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -804,11 +804,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Контрольні списки</string>
     <string name="why_upgrade_different_note_per_widget">Різні замітки та кольори для кожного віджета</string>
+    <string name="why_upgrade_note_locking">Note locking</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Налаштування формату дати та часу</string>
     <string name="why_upgrade_shortcuts">Ярлики на головному екрані</string>
     <string name="why_upgrade_file_compression">Підтримка стиснення файлів</string>
+    <string name="why_upgrade_recents_tab">Tab with recent files</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Налаштування кольору фону</string>
