--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -804,13 +804,13 @@
     <!-- Notes Pro -->
     <string name="why_upgrade_checklists">Λίστες ελέγχου</string>
     <string name="why_upgrade_different_note_per_widget">Διαφορετική σημείωση και χρώματα ανά γραφικό συστατικό</string>
-    <string name="why_upgrade_note_locking">Note locking</string>
+    <string name="why_upgrade_note_locking">Κλείδωμα Σημείωσης</string>
 
     <!-- File Manager Pro -->
     <string name="why_upgrade_date_and_time_format">Προσαρμογή μορφής ημ/νίας και ώρας</string>
     <string name="why_upgrade_shortcuts">Συντομεύσεις στην Αρχική οθόνη</string>
     <string name="why_upgrade_file_compression">Υποστήριξη συμπίεσης αρχείων</string>
-    <string name="why_upgrade_recents_tab">Tab with recent files</string>
+    <string name="why_upgrade_recents_tab">Καρτέλα με πρόσφατα αρχεία</string>
 
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Προσαρμογή χρώματος φόντου</string>
