adding a string for recent files tab

--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -674,6 +674,7 @@
     <string name="call_history_tab">Call History</string>
     <string name="groups_tab">Groups</string>
     <string name="last_used_tab">Last used one</string>
+    <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Adfer y ffeil hon</string>
