--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Deien historia</string>
     <string name="groups_tab">Taldeak</string>
     <string name="last_used_tab">Erabilitako azkena</string>
+    <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Leheneratu fitxategi hau</string>
