--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -577,6 +577,7 @@
     <string name="call_history_tab">Historia połączeń</string>
     <string name="groups_tab">Grupy</string>
     <string name="last_used_tab">Ostatnio wybrane</string>
+    <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Przywróć ten plik</string>
