--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -583,6 +583,7 @@
     <string name="call_history_tab">Historie volání</string>
     <string name="groups_tab">Skupiny</string>
     <string name="last_used_tab">Naposledy použité</string>
+    <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Obnovit tento soubor</string>
