--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -552,6 +552,7 @@
     <string name="call_history_tab">Historique d\'appels</string>
     <string name="groups_tab">Groupes</string>
     <string name="last_used_tab">Le dernier utilisé</string>
+    <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Restaurer ce fichier</string>
