--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Історія дзвінків</string>
     <string name="groups_tab">Групи</string>
     <string name="last_used_tab">Last used one</string>
+    <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Відновити цей файл</string>
