--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -518,6 +518,7 @@
     <string name="call_history_tab">通话记录</string>
     <string name="groups_tab">分组</string>
     <string name="last_used_tab">上次使用的</string>
+    <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">恢复此文件</string>
