--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Ιστορικό κλήσεων</string>
     <string name="groups_tab">Ομάδες</string>
     <string name="last_used_tab">Τελευταία χρήση</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
