--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Puheluhistoria</string>
     <string name="groups_tab">Ryhmät</string>
     <string name="last_used_tab">Viimeksi käytetty</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
