--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -517,6 +517,7 @@
     <string name="call_history_tab">発着信履歴</string>
     <string name="groups_tab">グループ</string>
     <string name="last_used_tab">最後に使用</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
