--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -583,6 +583,7 @@
     <string name="call_history_tab">История вызовов</string>
     <string name="groups_tab">Группы</string>
     <string name="last_used_tab">Последняя использованная</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
