--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -583,6 +583,7 @@
     <string name="call_history_tab">História volaní</string>
     <string name="groups_tab">Skupiny</string>
     <string name="last_used_tab">Naposledy použitá</string>
+    <string name="files_tab">Súbory</string>
     <string name="recent_files_tab">Najnovšie súbory</string>
 
     <!-- Recycle Bin -->
