--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Opkaldshistorik</string>
     <string name="groups_tab">Grupper</string>
     <string name="last_used_tab">Senest brugte</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
