--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Anrufliste</string>
     <string name="groups_tab">Gruppen</string>
     <string name="last_used_tab">Zuletzt verwendeter Tab</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
