--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Cronologia chiamate</string>
     <string name="groups_tab">Gruppi</string>
     <string name="last_used_tab">L\'ultima usata</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
