--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">היסטוריית שיחות</string>
     <string name="groups_tab">קבוצות</string>
     <string name="last_used_tab">בשימוש לאחרונה</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
