--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -574,6 +574,7 @@
     <string name="call_history_tab">Call History</string>
     <string name="groups_tab">Groups</string>
     <string name="last_used_tab">Last used one</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
