--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Oproepgeschiedenis</string>
     <string name="groups_tab">Groepen</string>
     <string name="last_used_tab">Laatst gebruikt</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
