--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Histórico de chamadas</string>
     <string name="groups_tab">Grupos</string>
     <string name="last_used_tab">Última usada</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
