--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -550,6 +550,7 @@
     <string name="call_history_tab">Arama Geçmişi</string>
     <string name="groups_tab">Gruplar</string>
     <string name="last_used_tab">Son kullanılan</string>
+    <string name="files_tab">Files</string>
     <string name="recent_files_tab">Recent files</string>
 
     <!-- Recycle Bin -->
